# qovery-cli-rust

./: .gitignore  Cargo.toml
src/: api.rs  application.rs  cloud_provider.rs  command.rs  conf.rs  constant.rs  environment.rs  error.rs  local_file.rs  main.rs  project.rs  qovery_conf.rs  repository.rs  router.rs  service.rs  status.rs  table.rs  util.rs
