[package]
name = "qovery"
version = "0.30.0"
authors = ["Qovery Team <support@qovery.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
dialoguer = "0.5.0"
console = "0.10.0"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
serde_yaml = "0.8.11"
chrono = { version = "0.4", features = ["serde"] }
dirs = "2.0.2"
path-slash = "0.1.1"
prettytable-rs = "0.8.0"
timeago = "0.2.0"
